--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f6e307c",
+   "id": "1524dbf8",
    "metadata": {},
    "source": [
     "# Temporal Difference (TD) Learning\n",
@@ -797,7 +797,54 @@
     "       $$v(S_t) \\leftarrow v(S_t) + \\alpha \\left[ R_{t+1} + \\gamma v(S_{t+1}) - v(S_t) \\right]$$\n",
     "\n",
     "4. Continue:\n",
-    "   - Repeat episodes until convergence of $v(s)$"
+    "   - Repeat episodes until convergence of $v(s)$\n",
+    "\n",
+    "## Advantages of TD\n",
+    "1. Model-Free: TD methods do not require a model of the environment’s dynamics (transition probabilities or reward function), making them applicable to unknown or complex environments.\n",
+    "\n",
+    "2. Online and Incremental Updates: TD can update value estimates after every step without waiting for the episode to finish. This is especially beneficial for problems with long episodes or continuing (non-terminating) tasks.\n",
+    "\n",
+    "3. Faster Convergence in Stochastic Environments: In many stochastic tasks, TD methods tend to converge faster and with less variance than Monte Carlo methods, since they bootstrap from existing estimates rather than relying solely on complete returns.\n",
+    "\n",
+    "## TD for Control\n",
+    "When using TD learning for control, knowing the optimal state-value function from policy evaluation alone is not enough in a model-free setting, because we do not know the environment’s transition dynamics. Without a model, we can’t directly compute which action leads to the best next state from just $v(s)$. Instead, we learn the action-value function $q(s, a)$, which estimates the expected return for taking action $a$ in state $s$ and then following the policy. This allows us to both evaluate and improve the policy directly.\n",
+    "\n",
+    "\n",
+    "### SARSA (On-Policy TD Control)\n",
+    "SARSA is an on-policy TD control algorithm that learns the optimal action-value function. It is similar to the TD(0) method for state-value estimation, but instead of updating from state to state, it updates from state-action pair to state-action pair, where\n",
+    "\n",
+    "$$q(S_t, A_t) \\leftarrow q(S_t, A_t) + \\alpha \\left[ R_{t+1} + \\gamma \\, q(S_{t+1}, A_{t+1}) - q(S_t, A_t) \\right]$$\n",
+    "\n",
+    "This update requires the five key events:\n",
+    "- $(S_t, A_t)$: current state-action pair\n",
+    "- $R_{t+1}$: reward from taking $A_t$ in $S_t$\n",
+    "- $(S_{t+1}, A_{t+1})$: next state-action pair chosen according to the current policy\n",
+    "\n",
+    "Because SARSA uses $A_{t+1}$ from the current policy, it learns the value of the policy as it is being followed (on-policy learning). After each update, the policy can be improved by making it greedy or $\\epsilon$-greedy with respect to the updated $q(s, a)$.\n",
+    "\n",
+    "### SARSA Algorithm\n",
+    "1. Given:\n",
+    "   - Initial policy $\\pi$ (e.g., $\\epsilon$-greedy)\n",
+    "   - Learning rate $\\alpha \\in (0, 1]$\n",
+    "   - Discount factor $\\gamma \\in [0, 1]$\n",
+    "\n",
+    "2. Initialize:\n",
+    "   - $q(s, a)$ arbitrarily for all $s \\in \\mathcal{S}$, $a \\in \\mathcal{A}$\n",
+    "\n",
+    "3. Repeat (for each episode):\n",
+    "   - Initialize starting state $S_0$\n",
+    "   - Choose action $A_0 \\sim \\pi(\\cdot \\mid S_0)$\n",
+    "   - For each timestep $t$:\n",
+    "     - Take action $A_t$, observe the reward $R_{t+1}$ and the next state $S_{t+1}$\n",
+    "     - Choose the next action according to the current policy $A_{t+1} \\sim \\pi(\\cdot \\mid S_{t+1})$\n",
+    "     - Update:\n",
+    "       $$q(S_t, A_t) \\leftarrow q(S_t, A_t) + \\alpha \\left[ R_{t+1} + \\gamma \\, q(S_{t+1}, A_{t+1}) - q(S_t, A_t) \\right]$$\n",
+    "     - Update $\\pi$ to be greedy or $\\epsilon$-greedy with respect to $q$\n",
+    "\n",
+    "4. Repeat until convergence:\n",
+    "   - Continue until $q(s, a)$ converges.\n",
+    "\n",
+    "Note: MC methods update only after an episode finishes. If an agent becomes trapped in a state (or a loop), the episode may never end, preventing any learning from occurring. In contrast, online learning methods such as SARSA update their estimates during the episode at every timestep. This allows the agent to quickly recognize that a policy leading to such traps is poor and adjust its behavior before the episode is over."
    ]
   },
   {
