Concept: Precision, Recall, F1

--- a/notebooks/Concepts & Guild.ipynb
+++ b/notebooks/Concepts & Guild.ipynb
@@ -145,35 +145,63 @@
     "\n",
     "\n",
     "## Skewed dataset\n",
-    "The ratio of the positive and negative cases are signficantly skewed \n",
+    "The ratio of the positive and negative cases are signficantly skewed "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "235ae34f",
+   "metadata": {},
+   "source": [
+    "## Accuracy\n",
+    "In classification problems, accuracy measures the proportion of correctly classified data points:  \n",
     "\n",
-    "### Precision and recall\n",
-    "* True positive: acutal class = 1, predicted class = 1\n",
-    "* False positive: acutal class = 0, predicted class = 1\n",
-    "* True negative: acutal class = 0, predicted class = 0\n",
-    "* False negative: acutal class = 1, predicted class = 0\n",
+    "$$\\text{Accuracy} = \\frac{\\text{Number of correct predictions}}{\\text{Total number of predictions}}$$  \n",
     "\n",
-    "<img src=\"https://miro.medium.com/v2/resize:fit:1400/1*pOtBHai4jFd-ujaNXPilRg.png\" width=500>\n",
+    "While accuracy is an important metric, it can be misleading—especially for imbalanced datasets. For example, in a dataset with 1 positive sample and 99 negative samples, a model that always predicts “negative” will achieve 99% accuracy but completely fail to detect the positive class.   This is why precision and recall are needed to provide deeper insight into model performance.\n",
     "\n",
-    "This method helps to detect if an algorithm only predict one class all the time\n",
+    "## Precision and Recall  \n",
+    "In a binary classification problem, predictions fall into one of four categories:  \n",
     "\n",
-    "Precision measures the proportion of positive predictions that are actually correct, which useful when the cost of misclassifying a positive case is high. Recall measures the proportion of actual positive cases that are correctly identified by the model, which is useful when the cost of missing a positive case is high\n",
+    "1. True Positive (TP): Actual class = 1, predicted class = 1  \n",
+    "2. False Positive (FP): Actual class = 0, predicted class = 1  \n",
+    "3. True Negative (TN): Actual class = 0, predicted class = 0  \n",
+    "4. False Negative (FN): Actual class = 1, predicted class = 0\n",
     "\n",
-    "A model should aim for high precision and recall\n",
+    "These 4 categories are usually plotted with a confusion matrix\n",
+    "<img src=\"https://miro.medium.com/v2/resize:fit:1400/1*ZPTFqlhFPUvLg8P6q62ttg.png\" width=500>\n",
     "\n",
+    "We can use these 4 categories to calculate the precision and recall\n",
     "\n",
+    "$$\\text{Precision} = \\frac{TP}{TP + FP}$$\n",
     "\n",
-    "### Precision recall tradeoff\n",
-    "The tradeoff between precision and recall occurs because increasing the threshold for classification will result in fewer false positives (increasing precision) but also more false negatives (decreasing recall), and vice versa\n",
+    "$$\\text{Recall} = \\frac{TP}{TP + FN}$$  \n",
+    "\n",
+    "* Precision: Measures the accuracy of the model’s positive predictions, which is the proportion of predicted positives that are actually positive. High precision is important when the cost of misclassifying a negative case as positive is high. In other words, we aim for high precision when we only want to assign a positive label if the model is very confident, even if that means missing some actual positives.\n",
+    "\n",
+    "* Recall: Measures the model’s ability to detect all actual positive cases, which is the proportion of actual positives that are correctly identified by the model. High recall is important when the cost of missing a positive case is high. In other words, we aim for high recall when we want to avoid missing any positive cases, even if it means incorrectly labeling some negatives as positive.\n",
+    "\n",
+    "### Precision–Recall Trade-off  \n",
+    "Neither precision nor recall should be used alone because both scores can be cheated. If we only want high precision, we can achieve this by setting the threshold to give a positive label to be very high, so the model only gives a positive label when it's very confident, which leads to a high precision score. However, this is problematic as lots of apparent enough positive examples will be classified as negatives since the model will only give positive labels when it's super confident.\n",
+    "\n",
+    "If we only want high recall, we can achieve this by setting the threshold to give a positive label to be very low, so the model will give a positive label even when it's not confident enough, so it never misses a positive class to achieve a high recall score. However, lots of negative classes are misclassified as positive. \n",
+    "\n",
+    "When we want to achieve high precision and recall at the same time, the tradeoff occurs because increasing the threshold for classification will result in fewer false positives (increasing precision) but also more false negatives (decreasing recall), and vice versa. The balance between the two is often determined based on the problem requirements or by optimizing for a combined metric such as the F1 score.\n",
     "\n",
     "<img src=\"https://jamesmccaffrey.wordpress.com/wp-content/uploads/2014/11/precisionrecallgraph.jpg\" width=500>\n",
     "\n",
-    "In general, the threshold will be manaully picked or determined through F1 score\n",
     "\n",
-    "### F1 score\n",
-    "F1 score between 0 and 1 that indicates the precision and recall of a model. The higher the F1 score, the higher the precision and recall of the model\n",
+    "## F1 Score  \n",
+    "F1 score is a performance metric to evaluate how well a classification model performs by combining both precision and recall. F1 score is between 0 and 1; the higher the F1 score, the higher the precision and recall of the model\n",
     "\n",
-    "$$F_1 = \\frac{2\\cdot precision \\cdot recall}{precision + recall}$$ "
+    "$$F_1 = \\frac{2 \\cdot \\text{Precision} \\cdot \\text{Recall}}{\\text{Precision} + \\text{Recall}}$$\n",
+    "\n",
+    "## Multiclass Classification\n",
+    "In multiclass classification, we cannot directly compute a single precision, recall, or F1 score for the entire model. Instead, we calculate these metrics per class by treating one class as the positive class and all other classes as negative. This effectively transforms the multiclass problem into a binary classification problem for that specific class, allowing us to compute precision, recall, and F1 as usual.\n",
+    "\n",
+    "To obtain an overall evaluation for the model, we can calculate the scores for each class and then find the micro-average, macro-average or weighted average of the individual F1 scores as a global evaluation metric.\n",
+    "\n",
+    "<img src=\"https://www.researchgate.net/publication/361092131/figure/fig1/AS:1166908405612546@1655224052772/S-1-multiclass-confusion-matrix-TP-true-positive-FP-false-positive-FN-false-negative.png\" width=200>"
    ]
   },
   {
