--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -849,47 +849,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f6e2f0f",
+   "id": "ead42e1d",
    "metadata": {},
    "source": [
-    "## Stochastic environment\n",
-    "Stochastic environment is random in nature so the agent has a probability to fail to perform the action as expected, so the algorithm will perform the policy multiple times and maximize the expected return (average return) based on different reward sequence\n",
-    "\n",
-    "$$\\text {Expected return} = Average(R_1 + \\gamma^2 R_2 + \\gamma^3 R_3 + ... + \\gamma^n R_n) = E[R_1 + \\gamma^2 R_2 + \\gamma^3 R_3 + ... + \\gamma^n R_n]$$\n",
-    "\n",
-    "$$Q(s,a) = R(s) + \\gamma E[max_{a'}Q(s', a')]$$\n",
-    "\n",
-    "The policy will selected an action that maximize the expected return in state $s$\n",
-    "\n",
-    "\n",
-    "## Continuous states space\n",
-    "In a continuous states space, the state of the agent, $s$, will be a vector that contains all the information needed\n",
-    "\n",
-    "## Deep reinforcement learning\n",
-    "\n",
-    "1. Randomly initalize the neural network with a guess on $Q(s,a)$\n",
-    "2. Repeat {\n",
-    "    * Generate a training set\n",
-    "        1. From state $s$, perform a random action $a$ that results in state $s'$. Then, construct a tuple $(s, a, R(s), s')$\n",
-    "        2. Create and store sufficient amount of tuple (replay buffer) for training\n",
-    "        Calculate $Q(y = R(s) + \\gamma max_{a'} (s',a')$ by using the guessed function give by the neural network\n",
-    "    * Train the neural netowrk\n",
-    "        1. Create training set with the tuples, where $x=(s,a)$ and $y = R(s) + \\gamma max_{a'} Q(s',a')$\n",
-    "        2. Using the training set to train a network $Q_{new}$ such that $Q_{new}(s,a)\\approx y$        \n",
-    "    * Set $Q = Q_{new}$\n",
-    "    \n",
-    "   }\n",
-    " \n",
-    " With each interation, the neural network can get a better approximation of the $Q$ function\n",
-    "   \n",
-    "The neural network takes in a state, action pair and approximates the return a list $Q(s,a)$ values that contains the return for each action performed, so the algorithm can pick the action that maximize $Q(s,a)$ in the list\n",
-    "\n",
-    "\n",
-    "## Mini batch\n",
-    "When the training set is large, the algorithm only takes a subset of the training example to compute the cost and a different subset next time. Thus, the algorithm will not take the most optimal step each time, but it will speed up the training process significantly \n",
-    "\n",
-    "## Soft update\n",
-    "When updating $Q = Q_{new}$, the new network may be worse than the old one. To prevent full overwritting, we update the weigths and bias through $w = p \\times w + (1-p) \\times w_{new}$ and $b = p \\times b + (1-p) \\times b_{new}$ instead of $w = w_{new}$  and $b = b_{new}$, where $b$ is a value between 0 and 1"
+    "# Q-Learning"
    ]
   },
   {
