--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -844,16 +844,57 @@
     "4. Repeat until convergence:\n",
     "   - Continue until $q(s, a)$ converges.\n",
     "\n",
-    "Note: MC methods update only after an episode finishes. If an agent becomes trapped in a state (or a loop), the episode may never end, preventing any learning from occurring. In contrast, online learning methods such as SARSA update their estimates during the episode at every timestep. This allows the agent to quickly recognize that a policy leading to such traps is poor and adjust its behavior before the episode is over."
+    "Note: MC methods update only after an episode finishes. If an agent becomes trapped in a state (or a loop), the episode may never end, preventing any learning from occurring. In contrast, online learning methods such as SARSA update their estimates during the episode at every timestep. This allows the agent to quickly recognize that a policy leading to such traps is poor and adjust its behavior before the episode is over.\n",
+    "\n",
+    "## Q-Learning\n",
+    "Q-learning is an off-policy TD control algorithm that directly learns the optimal action-value function $q_*$, rather than the action-value function of the current policy $q_\\pi$. This differs from SARSA (on-policy), which learns $q_\\pi$ for the policy being followed. The Q-learning update rule is\n",
+    "\n",
+    "$$q(S_t, A_t) \\leftarrow q(S_t, A_t) + \\alpha \\left[ R_{t+1} + \\gamma \\max_a q(S_{t+1}, a) - q(S_t, A_t) \\right]$$\n",
+    "\n",
+    "* The max operator selects the value of the best possible next action, regardless of the current policy.\n",
+    "* This makes Q-learning off-policy: it learns as if the agent is always acting greedily, even if it is exploring in practice.\n",
+    "\n",
+    "Both SARSA and Q-learning are sample-based solutions to the Bellman equations and can converge to the true action-value functions given enough samples. However there's a key difference in which Bellman equation the algorithm is solving\n",
+    "\n",
+    "- SARSA solves the Bellman expectation equation for $q_\\pi$, where\n",
+    "  $$q_\\pi(s, a) = \\sum_{s'} \\sum_{r} p(s', r \\mid s, a) \\left[ r + \\gamma \\sum_{a'} \\pi(a' \\mid s') q_\\pi(s', a') \\right]$$\n",
+    "\n",
+    "- Q-learning solves the Bellman optimality equation for $q_*$, where\n",
+    "  $$q_*(s, a) = \\sum_{s'} \\sum_{r} p(s', r \\mid s, a) \\left[ r + \\gamma \\max_{a'} q_*(s', a') \\right]$$\n",
+    "\n",
+    "\n",
+    "Therefore, SARSA need to follow policy iteration by first estimate $q_\\pi$ from experience, then make the policy greedy (or $\\epsilon$-greedy) with respect to $q_\\pi$. On the other hand, Q-learning effectively uses value iteration. It updates $q(s,a)$ as if it were already the optimal $q_*$, combining policy evaluation and improvement in a single step.\n",
+    "\n",
+    "Q-learning is an off-policy algorithm because it always learns from the value of the best possible action it could take in the next state, rather than the value of the action it actually took. In this case, the target policy (the policy Q-learning is trying to learn) is always greedy with respect to the current action-value estimates. The behaviour policy (the policy used to select actions during learning) can be any exploratory policy, such as $\\epsilon$-greedy or even random, as long as it ensures sufficient exploration. This separation between the behavior policy and the target policy is what makes Q-learning off-policy.\n",
+    "\n",
+    "Importance sampling\n",
+    "\n",
+    "### Q-Learning Algorithm\n",
+    "1. Given:\n",
+    "   - Learning rate $\\alpha \\in (0, 1]$\n",
+    "   - Discount factor $\\gamma \\in [0, 1]$\n",
+    "\n",
+    "2. Initialize:\n",
+    "   - $q(s, a)$ arbitrarily for all $s \\in \\mathcal{S}$, $a \\in \\mathcal{A}$\n",
+    "\n",
+    "3. Repeat (for each episode):\n",
+    "   - Initialize starting state $S_0$\n",
+    "   - Choose initial action $A_0$ using an exploration policy (e.g., $\\epsilon$-greedy based on $q$)\n",
+    "   - For each timestep $t$:\n",
+    "     - Take action $A_t$, observe reward $R_{t+1}$ and next state $S_{t+1}$\n",
+    "     - Update:\n",
+    "       $$q(S_t, A_t) \\leftarrow q(S_t, A_t) + \\alpha \\left[ R_{t+1} + \\gamma \\max_a q(S_{t+1}, a) - q(S_t, A_t) \\right]$$\n",
+    "     - Choose next action $A_{t+1}$ using the exploration policy\n",
+    "\n",
+    "4. **Until convergence**:\n",
+    "   - Continue until $q(s, a)$ stabilizes or a predefined stopping condition is met.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ead42e1d",
+   "id": "921acf12",
    "metadata": {},
-   "source": [
-    "# Q-Learning"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
