RL: Expected SARSA

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -807,7 +807,7 @@
     "3. Faster Convergence in Stochastic Environments: In many stochastic tasks, TD methods tend to converge faster and with less variance than Monte Carlo methods, since they bootstrap from existing estimates rather than relying solely on complete returns.\n",
     "\n",
     "## TD for Control\n",
-    "When using TD learning for control, knowing the optimal state-value function from policy evaluation alone is not enough in a model-free setting, because we do not know the environment’s transition dynamics. Without a model, we can’t directly compute which action leads to the best next state from just $v(s)$. Instead, we learn the action-value function $q(s, a)$, which estimates the expected return for taking action $a$ in state $s$ and then following the policy. This allows us to both evaluate and improve the policy directly.\n",
+    "When using TD learning for control, knowing the optimal state-value function from policy evaluation alone is not enough in a model-free setting, because we do not know the environment’s transition dynamics. Without a model, we can’t directly compute which action leads to the best next state from just $v(s)$. Instead, we learn the action-value function $q(s, a)$, which estimates the expected return for taking action $a$ in state $s$ and then following the policy. This allows us to both evaluate and improve the policy directly. We will address 3 different TD control algorithms: SARSA, Q-learning, and expected SARSA\n",
     "\n",
     "\n",
     "### SARSA (On-Policy TD Control)\n",
@@ -887,12 +887,31 @@
     "     - Choose next action $A_{t+1}$ using the exploration policy\n",
     "\n",
     "4. **Until convergence**:\n",
-    "   - Continue until $q(s, a)$ stabilizes or a predefined stopping condition is met.\n"
+    "   - Continue until $q(s, a)$ stabilizes or a predefined stopping condition is met.\n",
+    "\n",
+    "## Expected SARSA  \n",
+    "Expected SARSA is another TD control algorithm that improves upon the standard SARSA method by uinsg the expected value of the next state's action-value (weighted by the policy's action probabilities) to update the current estimation. The update rule for expected SARSA is\n",
+    "\n",
+    "$$q(S_t, A_t) \\leftarrow q(S_t, A_t) + \\alpha \\left[ R_{t+1} + \\gamma \\sum_{a} \\pi(a \\mid S_{t+1}) \\, q(S_{t+1}, a) - q(S_t, A_t) \\right]$$  \n",
+    "\n",
+    "Unlike SARSA, which relies on a single sampled action for its update, Expected SARSA computes a weighted average over all possible actions in the next state, using the policy's action probabilities. This approach reduces variance in the estimation process, as SARSA's reliance on a single sample can lead to high variability, which depends on whether the sampled action is favorable or not. In contrast, Expected SARSA uses the expected value, which provides a deterministic and more stable update, often allowing for larger step sizes ($\\alpha$) without compromising long-term performance.\n",
+    "\n",
+    "However, this reduction in variance comes at a computational cost. Since expected SARSA must evaluate and weight all possible actions at each timestep, it becomes computationally expensive, particularly in environments with large action spaces. Despite this trade-off, Expected SARSA is often preferred in scenarios where variance reduction is critical, and computational resources are sufficient to handle the additional overhead.\n",
+    "\n",
+    "<img src=\"https://www.researchgate.net/publication/224446259/figure/fig3/AS:667853514625027@1536240094240/Average-return-on-the-cliff-walking-task-over-the-first-n-episodes-for-n-100-and-n.png\" width=500>\n",
+    "\n",
+    "### On-Policy and Off-Policy Flexibility  \n",
+    "Expected SARSA can function as both an on-policy and off-policy algorithm, depending on how actions are selected during learning. The key to this flexibility lies in its update rule, which computes the expected action-value over all possible next actions, weighted by the policy $\\pi(a \\mid S_{t+1})$. This update computation independent of the actual action taken, meaning expected SARSA can function as both an on-policy and off-policy algorithm\n",
+    "\n",
+    "* On-policy case: If the policy used to select actions (e.g., $\\epsilon$-greedy) is the same as the policy being evaluated ($\\pi$), Expected SARSA operates on-policy. The expectation aligns with the agent's current behavior policy.  \n",
+    "* Off-policy case: If actions are selected using a different policy (e.g., a purely exploratory policy) while the expectation is computed under a target policy ($\\pi$), the algorithm becomes off-policy.  \n",
+    "\n",
+    "Note: Q-learning is a special case of Expected SARSA where the target policy is deterministic, always selecting the action with the highest $q$-value (i.e., $\\pi(a \\mid S_{t+1}) = 1$ for $a = \\arg\\max_a q(S_{t+1}, a)$). This makes Q-learning inherently off-policy, as it learns the optimal policy while potentially following an exploratory policy, making it an special case of Expected SARSA"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "921acf12",
+   "id": "7a60a8da",
    "metadata": {},
    "source": []
   },
