RL: Added Expected SARSA

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -894,26 +894,37 @@
     "\n",
     "$$q(S_t, A_t) \\leftarrow q(S_t, A_t) + \\alpha \\left[ R_{t+1} + \\gamma \\sum_{a} \\pi(a \\mid S_{t+1}) \\, q(S_{t+1}, a) - q(S_t, A_t) \\right]$$  \n",
     "\n",
-    "Unlike SARSA, which relies on a single sampled action for its update, Expected SARSA computes a weighted average over all possible actions in the next state, using the policy's action probabilities. This approach reduces variance in the estimation process, as SARSA's reliance on a single sample can lead to high variability, which depends on whether the sampled action is favorable or not. In contrast, Expected SARSA uses the expected value, which provides a deterministic and more stable update, often allowing for larger step sizes ($\\alpha$) without compromising long-term performance.\n",
+    "Unlike SARSA, which updates its estimates using a single sampled action from the next state, Expected SARSA computes a weighted average over all possible actions in the next state, weighted by the policy's action probabilities. This reduces variance in the estimation process because SARSA's reliance on a single sample can lead to high variability, as the update depends heavily on whether the sampled action is favorable or not. In contrast, Expected SARSA’s use of the expected value produces a deterministic and more stable update, often allowing for larger step sizes ($\\alpha$) without destabilizing learning.\n",
     "\n",
-    "However, this reduction in variance comes at a computational cost. Since expected SARSA must evaluate and weight all possible actions at each timestep, it becomes computationally expensive, particularly in environments with large action spaces. Despite this trade-off, Expected SARSA is often preferred in scenarios where variance reduction is critical, and computational resources are sufficient to handle the additional overhead.\n",
+    "The reason is that SARSA’s updates are influenced by the randomness of a single action choice, which can make large-step-size update overly aggressive and prone to divergence. Expected SARSA, on the other hand, bases its update on the expected return under the policy, smoothing out randomness across all possible actions. As learning progresses and the action-value estimates converge, the computed expected value approaches the current estimate, where $\\sum_{a} \\pi(a \\mid S_{t+1}) \\, q(S_{t+1}, a) \\approx q(S_t, A_t)$, meaning the update term goes to zero and learning stabilizes after enought training.\n",
     "\n",
     "<img src=\"https://www.researchgate.net/publication/224446259/figure/fig3/AS:667853514625027@1536240094240/Average-return-on-the-cliff-walking-task-over-the-first-n-episodes-for-n-100-and-n.png\" width=500>\n",
     "\n",
+    "However, this reduction in variance comes at a computational cost. Since expected SARSA must evaluate and weight all possible actions at each timestep, it becomes computationally expensive, particularly in environments with large action spaces. Despite this trade-off, Expected SARSA is often preferred in scenarios where variance reduction is critical, and computational resources are sufficient to handle the additional overhead.\n",
+    "\n",
     "### On-Policy and Off-Policy Flexibility  \n",
-    "Expected SARSA can function as both an on-policy and off-policy algorithm, depending on how actions are selected during learning. The key to this flexibility lies in its update rule, which computes the expected action-value over all possible next actions, weighted by the policy $\\pi(a \\mid S_{t+1})$. This update computation independent of the actual action taken, meaning expected SARSA can function as both an on-policy and off-policy algorithm\n",
+    "Expected SARSA can function as both an on-policy and off-policy algorithm, depending on how actions are selected during learning. The key to this flexibility lies in its update rule, which computes the expected action-value over all possible next actions, weighted by the policy $\\pi(a \\mid S_{t+1})$. This update computation is independent of the actual action taken, meaning expected SARSA can function as both an on-policy and off-policy algorithm\n",
     "\n",
     "* On-policy case: If the policy used to select actions (e.g., $\\epsilon$-greedy) is the same as the policy being evaluated ($\\pi$), Expected SARSA operates on-policy. The expectation aligns with the agent's current behavior policy.  \n",
     "* Off-policy case: If actions are selected using a different policy (e.g., a purely exploratory policy) while the expectation is computed under a target policy ($\\pi$), the algorithm becomes off-policy.  \n",
     "\n",
-    "Note: Q-learning is a special case of Expected SARSA where the target policy is deterministic, always selecting the action with the highest $q$-value (i.e., $\\pi(a \\mid S_{t+1}) = 1$ for $a = \\arg\\max_a q(S_{t+1}, a)$). This makes Q-learning inherently off-policy, as it learns the optimal policy while potentially following an exploratory policy, making it an special case of Expected SARSA"
+    "Note: Q-learning is a special case of Expected SARSA where the target policy is deterministic, always selecting the action with the highest $q$-value (i.e., $\\pi(a \\mid S_{t+1}) = 1$ for $a = \\arg\\max_a q(S_{t+1}, a)$). This makes Q-learning inherently off-policy, as it learns the optimal policy while potentially following an exploratory policy, making it an special case of Expected SARSA\n",
+    "\n",
+    "## Summary\n",
+    "| Algorithm        | On/Off Policy | Update Target   | Key Idea                                                                                          | Pros                                                                                              | Cons                                                                                              |\n",
+    "|------------------|--------------|-------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------|\n",
+    "| **SARSA**        | On-policy    | $$R_{t+1} + \\gamma \\, q(S_{t+1}, A_{t+1})$$ | Updates using the *actual* action taken by the current policy.                                    | Simple; naturally incorporates exploration in updates.                                           | Higher variance (depends on a single sample); may require smaller step sizes for stability.      |\n",
+    "| **Q-learning**   | Off-policy   | $$R_{t+1} + \\gamma \\, \\max_{a} q(S_{t+1}, a)$$ | Updates towards the *best possible* action value, regardless of the action actually taken.        | Directly learns the optimal policy; converges faster in some settings.                           | Can overestimate action values; requires good exploration policy to cover state-action space.    |\n",
+    "| **Expected SARSA** | Both         | $$R_{t+1} + \\gamma \\, \\sum_a \\pi(a \\mid S_{t+1}) \\, q(S_{t+1}, a)$$ | Updates using the *expected* value over all possible actions under the policy.                    | Lower variance; more stable updates; can use larger step sizes without harming convergence.      | Higher computation cost (must compute weighted sum over all actions at each step).               |\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7a60a8da",
+   "id": "09c05d6b",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Models In Reinforcement Learning"
+   ]
   },
   {
    "cell_type": "markdown",
