--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -867,7 +867,7 @@
     "\n",
     "Q-learning is an off-policy algorithm because it always learns from the value of the best possible action it could take in the next state, rather than the value of the action it actually took. In this case, the target policy (the policy Q-learning is trying to learn) is always greedy with respect to the current action-value estimates. The behaviour policy (the policy used to select actions during learning) can be any exploratory policy, such as $\\epsilon$-greedy or even random, as long as it ensures sufficient exploration. This separation between the behavior policy and the target policy is what makes Q-learning off-policy.\n",
     "\n",
-    "Importance sampling\n",
+    "Although Q-learning is an off-policy algorithm, it does not require importance sampling to reweight trajectories. Importance sampling is typically used to correct for differences in action-selection probabilities between the target policy and the behavior policy. However, Q-learning’s update rule always evaluates the next state using the greedy action with respect to the current action-value estimates, regardless of the action actually taken by the behavior policy. Because the target in the update is determined solely by the current Q-values and not by the behavior policy’s action probabilities, no such correction is needed.\n",
     "\n",
     "### Q-Learning Algorithm\n",
     "1. Given:\n",
@@ -886,7 +886,7 @@
     "       $$q(S_t, A_t) \\leftarrow q(S_t, A_t) + \\alpha \\left[ R_{t+1} + \\gamma \\max_a q(S_{t+1}, a) - q(S_t, A_t) \\right]$$\n",
     "     - Choose next action $A_{t+1}$ using the exploration policy\n",
     "\n",
-    "4. **Until convergence**:\n",
+    "4. Until convergence:\n",
     "   - Continue until $q(s, a)$ stabilizes or a predefined stopping condition is met.\n",
     "\n",
     "## Expected SARSA  \n",
@@ -920,10 +920,47 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09c05d6b",
+   "id": "9de04851",
    "metadata": {},
    "source": [
-    "# Models In Reinforcement Learning"
+    "# Models In Reinforcement Learning\n",
+    "In reinforcement learning, a model stores knowledge about the environment dynamics, which tells the agent how the environment responds to actions by producing rewards and transitioning to new states. In other words, the model tells the agent how the world works based on its current understanding. By using this knowledge, the model can be used to simulate the environment and produce simulated experience for the agent to learn from. There are two types of models\n",
+    "1. Sample models: return a single possible outcome by sampling from the underlying probability distribution of state transitions and rewards.\n",
+    "    - Pros: Fast, memory-efficient.\n",
+    "    - Cons: Less accurate, as each sample is only an approximation of the full distribution.\n",
+    "\n",
+    "2. Distribution model: specify the complete probability distribution over all possible outcomes.\n",
+    "    - Pros: More accurate and informative.\n",
+    "    - Cons: Larger, more computationally expensive.\n",
+    "    - Note: A distribution model can also be used to generate a sample model by sampling from it.\n",
+    "\n",
+    "In reinforcement learning, there are two types of learning methods, model-based and model-free methods. Model-based methods. Model-based methods rely heavily on planning—using the model to simulate possible futures, evaluate them, and improve the policy before acting in the real environment, like DP. Model-free methods, on the other hand, do not learn or estimate the model and learn the value function directly from experience through trial and error, like MC or TD methods.\n",
+    "\n",
+    "Note: For learning to happen, the agent must interact with an environment, which itself follows some transition and reward dynamics (this is the “true model” of the world). The key difference between model-based and model-free methods lies in whether the learning algorithm explicitly learns or uses its own approximation of this model. Both approaches aim to improve estimates of value functions (and ultimately the policy), but model-based methods do so by first estimating the transition and reward functions and then planning with them, whereas model-free methods skip this step and learn value functions directly from experience without building an explicit model.\n",
+    "\n",
+    "# Planning with Model Experience\n",
+    "In model-based RL, planning takes the model as input and outputs an improved policy for interacting with the environment. The process can also refine the model itself as more real-world data is gathered, creating a continuous loop of improvement between model learning and policy optimization. The key of planning is to obtain a better estimation of the value functions\n",
+    "\n",
+    "<img src=\"https://miro.medium.com/v2/resize:fit:554/1*j5chypwunyX00ejvuu10Gw.png\" width=300>\n",
+    "\n",
+    "## Random Tabular Q-Planning\n",
+    "Random tabular Q-planning is a model-based reinforcement learning algorithm. Instead of interacting with the real environment, it uses a learned or known model of the environment to simulate experiences and update the action-value function. At each step, the algorithm picks a random state–action pair (not necessarily from a real trajectory), queries the model for the resulting reward and next state, and then performs a Q-value update.  \n",
+    "By simulating many such updates from the model, the policy can improve without needing to gather new real-world experience, follows the algorithm below\n",
+    "\n",
+    "1. Initialize:\n",
+    "   - For all $ s \\in \\mathcal{S} $ and $ a \\in \\mathcal{A} $, set $ q(s, a) $ arbitrarily (e.g., 0).\n",
+    "\n",
+    "2. Loop (Planning):\n",
+    "   - Randomly select a state $ S_t $ and an action $ A_t $ from the state–action space.\n",
+    "   - Use the model to get the predicted reward $ R_{t+1} $ and next state $ S_{t+1} $. (If using a distribution model, you may sample or use expected values.)\n",
+    "   - Update:\n",
+    "     $$\n",
+    "     q(S_t, A_t) \\leftarrow q(S_t, A_t) + \\alpha \\left[ R_{t+1} + \\gamma \\max_a q(S_{t+1}, a) - q(S_t, A_t) \\right]\n",
+    "     $$\n",
+    "   - Optionally, update the policy to be greedy or $\\epsilon$-greedy with respect to $ q $.\n",
+    "\n",
+    "\n",
+    "Note: All updates in this algorihtm use simulated experience from the model, not real-world interaction."
    ]
   },
   {
